data/all_generated_tests/raw_wast_tests/br_if_EdgeCaseFailuresinbr_table_1920.wast
;; 1. **Test with Empty Operands Before `br_table`**:    - **Description**: Test a `br_table` instruction when the operand stack is empty before execution.    - **Reasoning**: Checks if the implementation prevents stack underflow by ensuring sufficient operands before `br_table`.    - **Edge Relation**: Ensures correct handling of operand stack related to polymorphism for evaluating `br_table` indices.

(assert_invalid
  (module (func (block (br_if 0))))
  "type mismatch"
)